# analytical_data_quality

./: .gitignore  .pre-commit-config.yaml  .user.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  credentials.json.example  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  data-quality.yml  dbt-tests.yml  security-scan.yml
config/: logging.yml
config/environments/: dev.yml  prod.yml  settings.py  staging.yml
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/models/refined/: fct_orders_summary.sql  fct_setor_vendas.sql
dbt/models/staging/: schema.yml  stg_deliveries.sql  stg_orders.sql  stg_setor_vendas.sql
dbt/models/trusted/: schema.yml  trusted_orders.sql  trusted_setor_vendas.sql
governance/policies/: acess_control.yml  data_classification.yml  data_retention.yml
governance/sla/: sla_definitions.yml
infra/airflow/: airflow.cfg  docker-compose.airflow.yml
infra/docker/: Dockerfile  Dockerfile.airflow
infra/jenkins/: Dockerfile  jenkins.yaml  plugins.txt
infra/minio/: docker-compose.minio.yml  init-buckets.sh
infra/postgres/: init.sql
infra/terraform/: main.tf  outputs.tf  variable.tf
observability/: prometheus.yml
orchestration/hooks/: postgres_hook.py
scripts/: run_migrations.sh  seed_data.sh  setup.sh  validate_contracts.sh
scripts/jenkins/: setup.sh
services/api/: main.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/domain/: __init__.py  repositories.py  services.py  value_objects.py
tests/: conftest.py
(+8 files in other folders)
